# mcrelay

./: CMakeLists.txt  README.md
python/: udprelay.py
src/: CMakeLists.txt  mcendpoint.h  relayendpoint.h  udpendpoint.h  udprelay.cpp  udprelay.sh
systemd/: CMakeLists.txt  mcrelay@.service  mcrelay@ATAKCHAT-to-192.168.1.20  mcrelay@COTSA-to-192.168.1.20
